# selenium_web_autometa

./: .gitignore  README.cn.md  README.md  app.py  extract.py  main.ipynb  main.py  pyproject.toml  requirements.txt
src/selenium_web_autometa/: main.py
