[project]
name = "selenium_web_autometa"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yuzhi535", email = "zhouyuxi.abc@gmail.com"},
]
dependencies = [
    "selenium<5.0.0,>=4.0.0",
    "streamlit",
    "Pillow<9.0,>=8.3.1",
    "pyqt5>=5.15.11",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
